[package]
name = "abci2"
description = "Low-level ABCI protocol server"
version = "0.1.3"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.16"
tendermint-proto = "0.23.5"
prost = "0.9.0"
thiserror = "1.0.30"

[[example]]
name = "simple"
path = "./examples/simple.rs"
