[package]
name = "abci2"
description = "Low-level ABCI protocol server"
version = "0.1.3"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.17"
tendermint-proto = "=0.32.0"
prost = "0.11.8"
thiserror = "1.0.40"

[[example]]
name = "simple"
path = "./examples/simple.rs"
